# Stellar_Smart_Contract

OneDrive/Desktop/Postscript/: README.md
stellar-storage-dapp/stellar-storage-dapp/: .env.example  .gitignore  README.md  requirements.txt
stellar-storage-dapp/stellar-storage-dapp/contracts/storage/: .gitignore  Cargo.toml
stellar-storage-dapp/stellar-storage-dapp/contracts/storage/src/: lib.rs
stellar-storage-dapp/stellar-storage-dapp/frontend/src/: index.html  package.json  vite.config.ts
stellar-storage-dapp/stellar-storage-dapp/frontend/src/components/: App.tsx  DataTable.tsx  RetrieveData.tsx  StoreData.tsx  index.css  main.tsx
stellar-storage-dapp/stellar-storage-dapp/frontend/src/components/hooks/: useWallet.ts
stellar-storage-dapp/stellar-storage-dapp/frontend/src/components/lib/: contract.ts
stellar-storage-dapp/stellar-storage-dapp/scripts/: deply.sh  fund-account.sh
